<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/detail_page"
    tools:context=".ui.detail.DetailActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:background="@color/colorBlack"
        android:padding="20dp">

        <ImageView
            android:id="@+id/profile_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerVertical="true"
            android:contentDescription="@string/detail_image"
            android:src="@drawable/ic_baseline_person" />

        <TextView
            android:id="@+id/tvUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@+id/profile_image"
            android:includeFontPadding="false"
            android:text="@string/detail_name"
            android:textColor="@color/colorWhite"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvUserName"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@+id/profile_image"
            android:includeFontPadding="false"
            android:text="@string/detail_type"
            android:textColor="@color/colorWhite"
            android:textSize="14sp" />



    </RelativeLayout>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:padding="5dp">

        <com.google.android.material.card.MaterialCardView
            android:layout_height="80dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            app:cardCornerRadius="20dp"
            app:cardBackgroundColor="@color/colorBlack"
            app:cardElevation="10dp">

            <RelativeLayout
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:padding="5dp">

                <TextView
                    android:id="@+id/tvFollower"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:includeFontPadding="false"
                    android:text="@string/v_follower"
                    android:textColor="@color/colorWhite"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/txtFollower"
                    android:includeFontPadding="false"
                    android:layout_below="@id/tvFollower"
                    android:layout_centerHorizontal="true"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:textColor="@color/colorWhite"
                    android:text="@string/follower"
                    android:textSize="20sp" />

            </RelativeLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_height="80dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            app:cardCornerRadius="20dp"
            app:cardBackgroundColor="@color/colorBlack"
            app:cardElevation="10dp">

            <RelativeLayout
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:padding="5dp">

                <TextView
                    android:id="@+id/tvFollowing"
                    android:includeFontPadding="false"
                    android:layout_centerInParent="true"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/v_following"
                    android:textColor="@color/colorWhite"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/txtFollowing"
                    android:includeFontPadding="false"
                    android:layout_below="@id/tvFollowing"
                    android:layout_centerHorizontal="true"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/following"
                    android:textColor="@color/colorWhite"
                    android:textSize="20sp" />

            </RelativeLayout>

        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            app:tabTextColor="@android:color/white"/>

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

</LinearLayout>