<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgTypeIcon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/card_image" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/txtName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="60dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="10dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textStyle="bold"
                    tools:text="@string/user_name" />

                <TextView
                    android:id="@+id/txtDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="60dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="10dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    tools:text="@string/user_description" />
            </LinearLayout>
        </RelativeLayout>

</layout>